--- a/Apha/ProjectFifa/ProjectFifa/ProjectFifa.csproj
+++ b/Apha/ProjectFifa/ProjectFifa/ProjectFifa.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{368C956D-0639-4FD7-A50D-ACD86152064E}</ProjectGuid>
+    <ProjectGuid>{71E4D38F-6ADB-40EF-BC60-C60A25326CAB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FifaProject</RootNamespace>
-    <AssemblyName>FifaProject</AssemblyName>
+    <RootNamespace>ProjectFifa</RootNamespace>
+    <AssemblyName>ProjectFifa</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,14 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
+    <Compile Include="betForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="betForm.Designer.cs">
+      <DependentUpon>betForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="betForm.resx">
+      <DependentUpon>betForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
