--- a/Apha/ProjectFifa/ProjectFifa/ProjectFifa.csproj
+++ b/Apha/ProjectFifa/ProjectFifa/ProjectFifa.csproj
@@ -50,11 +50,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="bet.cs" />
-    <Compile Include="betForm.cs">
+    <Compile Include="betAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="betForm.Designer.cs">
-      <DependentUpon>betForm.cs</DependentUpon>
+    <Compile Include="betAdd.Designer.cs">
+      <DependentUpon>betAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="bettorOverview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="bettorOverview.Designer.cs">
+      <DependentUpon>bettorOverview.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -76,6 +82,7 @@
       <DependentUpon>bettorAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="bettorStorage.cs" />
+    <Compile Include="match.cs" />
     <Compile Include="Teamoverview.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,8 +92,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="team.cs" />
-    <EmbeddedResource Include="betForm.resx">
-      <DependentUpon>betForm.cs</DependentUpon>
+    <EmbeddedResource Include="betAdd.resx">
+      <DependentUpon>betAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="bettorOverview.resx">
+      <DependentUpon>bettorOverview.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
